fix: transition header background, fix footer items spacing

--- a/src/components/base/NavigationItem/NavigationItem.module.scss
+++ b/src/components/base/NavigationItem/NavigationItem.module.scss
@@ -122,6 +122,16 @@
     }
   }
 
+  .listWrapper {
+    li:last-of-type {
+      margin-block-end: px-to-rem(var(--spacing-l));
+
+      @include mq($from: large) {
+        margin-block-end: 0;
+      }
+    }
+  }
+
   .item.item {
     --button-padding-block-inner-text: 13;
 
